chore: change startup_mode

--- a/alacritty.toml
+++ b/alacritty.toml
@@ -12,7 +12,7 @@ decorations = "Buttonless"
 opacity = 0.90
 blur = true
 option_as_alt = "Both"
-startup_mode = "Maximized"
+startup_mode = "Windowed"
 
 [font]
 normal.family = "FiraCode Nerd Font"
