--- a/alacritty.toml
+++ b/alacritty.toml
@@ -15,7 +15,10 @@ option_as_alt = "Both"
 startup_mode = "Windowed"
 
 [font]
-normal.family = "FiraCode Nerd Font"
+normal.family = "JetBrainsMono Nerd Font Mono"
+bold.family = "JetBrainsMono Nerd Font Mono"
+italic.family = "JetBrainsMono Nerd Font Mono"
+bold_italic.family = "JetBrainsMono Nerd Font Mono"
 size = 16
 
 [selection]
